Moved the max reminder property to monitor method, and fixed lastPage log